# krkr2ports

./: CMakeLists.txt
core/: CMakeLists.txt
core/base/win32/: SysInitImpl.h
core/environ/win32/: tvpwin32.cpp  tvpwin32.rc.in
core/tjs2/: tjsConfig.h  tjsError.h  tjsTypes.h  tjsUtils.h
